# transmission-sys

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  default.nix  tr_build.sh  wrapper.h
src/: lib.rs  test.rs
