[package]
name = "transmission-sys"
version = "0.1.4"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>"]
edition = "2018"
description = "Rust bindings for the Transmission bittorrent client."
repository = "https://gitlab.com/tornado-torrent/transmission-sys"
readme = "README.md"
categories = ["external-ffi-bindings"]
keywords = ["torrent", "bittorrent", "transmission"]
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
    "wrapper.h",
    "vendor/CMakeLists.txt",
    "vendor/cmake/*",
    "vendor/third-party/*",
    "vendor/libtransmission/*"
]

[badges]
gitlab = { repository = "tornado-torrent/transmission-sys", branch = "master" }

[build-dependencies]
bindgen = "^0.45"
cmake = "^0.1"
